@@ -41,6 +41,7 @@ namespace UIExtensions
             { "Menu_Opt_OverridePlayerInfomation", "Override Base Game Settings Using Following Settings" },
             { "Menu_Opt_ShowNamesForParty", "Show names of party members" },
             { "Menu_Opt_ShowPartyHP", "Show party member HP" },
+            { "Menu_Opt_PartyHPIsShort", "Show text HP instead on HP bar" },
             { "Menu_Opt_ShowPartyActions", "Show party members' action" },
             { "Menu_Opt_ShowPartyAttackIntentions", "Show attack intentions of party members" },
             { "Menu_Opt_ShowPartyCastIntentions", "Show spellcasting intentions of party members" },
@@ -49,10 +50,13 @@ namespace UIExtensions
             { "Menu_Opt_OverrideEnemyInfomation", "Override Base Game Settings Using Following Settings" },
             { "Menu_Opt_ShowNamesForEnemies", "Show enemy name" },
             { "Menu_Opt_ShowEnemyHP", "Show enemy HP" },
+            { "Menu_Opt_EnemiesHPIsShort", "Show text HP instead on HP bar" },
             { "Menu_Opt_ShowEnemyActions", "Show enemy actions" },
             { "Menu_Opt_ShowEnemyIntentions", "Show enemy intentions" },
             { "Menu_Opt_ShowNumericCooldownEnemies", "Show cooldown timers for enemies" },
             { "Menu_Btn_None", "None" },
+            { "Menu_Btn_No", "No" },
+            { "Menu_Btn_Yes", "Yes" },
             { "Menu_Btn_Never", "Never" },
             { "Menu_Btn_Idleness", "When Idle" },
             { "Menu_Btn_InteractionPlayer", "On Selection" },
